2009-01-04 18:32-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSToolbarView.m: Use ASSIGN as suggested.  This corrects
	the crash and fixes the leak caused by the previous change.

2009-01-04 16:45-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSToolbarView.m: Correct crash in toolbar, since the
	static constant was being released.  

2009-01-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m: Check only shouldCreateUI before
	callin makeWindowControllers. This is the behaviour reported for Cocoa.

2009-01-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSWindowDecorationView.m: Adopt the window size when
	adding or removing a toolbar, not the size of the content view.

2009-01-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow+Toolbar.m: Move window toolbar code from here ...
	* Source/GSWindowDecorationView.m: ... to here.
	* Source/NSToolbarFrameworkPrivate.h: Declare new window
	decoration view toolbar handling methods.
	* Source/NSToolbar.m: Use them.

2009-01-02 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSToolbarView.h: Remove now
	unneeded include of NSToolbar.h
	* Source/NSToolbarFrameworkPrivate.h: New header file with shared
	toolbar classes extensions.
	* Source/NSWindow+Toolbar.m,
	* Source/NSToolbar.m
	* Source/NSToolbarItem.m
	* Source/GSToolbarView.m: Use this new header file.

2009-01-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow+Toolbar.m,
	* Source/NSToolbar.m: Rewrote interaction with GSToolbarView.
	* Source/NSToolbar.m (_toolbarItemForIdentifier:): Fix memory leak.
	* Headers/Additions/GNUstepGUI/GSToolbarView.h,
	* Source/GSToolbarView.m: General cleanup of code.

2009-01-02 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSButtonCell.m: Fix to use the backgroundColor method when
	drawing a borderless button.
	* Source/NSScroller.m:
	* Source/GSThemeDrawing.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h: